--- a/src/H3/H3.csproj
+++ b/src/H3/H3.csproj
@@ -1,12 +1,13 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <AssemblyName>pocketken.H3.3.7.2.0</AssemblyName>
-    <TargetFramework>net5.0</TargetFramework>
+    <TargetFramework>netstandard2.1</TargetFramework>
     <PackOnBuild>true</PackOnBuild>
     <PackageId>pocketken.H3</PackageId>
     <PackageVersion>3.7.2.0</PackageVersion>
     <Authors>pocketken</Authors>
+    <LangVersion>9.0</LangVersion>
     <Description>Port of Uber's H3 to .NET</Description>
     <PackageProjectUrl>https://github.com/pocketken/H3.net</PackageProjectUrl>
     <RepositoryUrl>https://github.com/pocketken/H3.net</RepositoryUrl>
@@ -23,11 +24,11 @@
 
   <ItemGroup>
     <PackageReference Include="NetTopologySuite" Version="2.3.0" />
+    <PackageReference Include="System.Text.Json" Version="5.0.2" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Model\" />
     <Folder Include="Algorithms\" />
-    <Folder Include="Extensions\" />
   </ItemGroup>
   <ItemGroup>
     <None Include="..\..\LICENSE">
